--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -2,7 +2,7 @@ body
 {
 	background: #000000;
 	color: #999;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Raleway';
 	font-size: 16px;
 	font-weight: 400;
 }
