--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -2,9 +2,9 @@ body
 {
 	background: #000000;
 	color: #999;
-	font-family: 'Raleway';
+	font-family: 'Raleway-SemiBold';
 	font-size: 16px;
-	font-weight: 400;
+	font-weight: 600;
 }
 
 /* start all section */
