Intentado poner la font que me gusta

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -2,9 +2,9 @@ body
 {
 	background: #000000;
 	color: #999;
-	font-family: 'Raleway-SemiBold';
+	font-family: 'Raleway';
 	font-size: 16px;
-	font-weight: 600;
+	font-weight: 400;
 }
 
 /* start all section */
