--- a/audiosAldu/style.css
+++ b/audiosAldu/style.css
@@ -28,7 +28,7 @@ h2 {
 
 @media (max-width: 600px) {
     h2, h3 {
-        font-size: 1em;
+        font-size: 1.5em;
     }
 }
 
@@ -36,6 +36,12 @@ h4, h5 {
     font-size: 1.5em;
     margin: 0.5em 0;
     animation: fadeInUp 1s ease-in-out;
+}
+
+@media (max-width: 600px) {
+    h4, h5 {
+        font-size: 1em;
+    }
 }
 
 @keyframes fadeInDown {
