--- a/pasapalabra/style.css
+++ b/pasapalabra/style.css
@@ -16,13 +16,13 @@ h1 {
 
 #rosco {
     position: relative;
-    width: 500px;
-    height: 500px;
-    margin: 0 auto;
-    border: 2px solid #333;
+    width: 570px; /* Aumenta el ancho del contenedor */
+    height: 570px; /* Aumenta la altura del contenedor */
+    border: 2px solid #000;
     border-radius: 50%;
-    background-color: #fff;
+    margin: 0 auto;
 }
+
 
 .letter {
     width: 50px;
@@ -63,6 +63,12 @@ h1 {
     border-radius: 10px;
     text-align: center;
     border: 3px solid #fff;
+}
+
+#timerPopup {
+    color: white;
+    font-size: 1.2em;
+    margin-bottom: 20px;
 }
 
 .close-button {
@@ -149,3 +155,59 @@ h1 {
     cursor: pointer;
 }
 
+/* Estilo para el modal del nombre de usuario */
+.modal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.modal-content {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.modal-content h2 {
+    margin-bottom: 10px;
+}
+
+.modal-content input {
+    padding: 10px;
+    width: 80%;
+    margin-bottom: 20px;
+}
+
+.modal-content button {
+    padding: 10px 20px;
+    cursor: pointer;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.modal-content button:hover {
+    background-color: #0056b3;
+}
+
+/* Estilo para el scoreboard */
+#scoreBoard {
+    margin-top: 20px;
+    font-size: 20px;
+}
+
+/* Estilo para las letras deshabilitadas */
+.disabled {
+    background-color: grey !important;
+    cursor: default;
+}
