--- a/twitchdle/styles.css
+++ b/twitchdle/styles.css
@@ -210,3 +210,35 @@ h1 {
 .email:hover {
     background-color: #c23321;
 }
+
+.emote {
+    position: absolute;
+    bottom: 100vh; /* Start off-screen, above the viewport */
+    width: 102px;
+    height: 56px;
+    pointer-events: none;
+    z-index: 1; /* Ensure images are behind the text */
+    animation: fall linear infinite;
+}
+
+@keyframes fall {
+    0% {
+        transform: translateY(-100vh); /* Start off-screen, above the viewport */
+        opacity: 1;
+    }
+    100% {
+        transform: translateY(100vh); /* End off-screen, below the viewport */
+        opacity: 0.1;
+    }
+}
+
+#emote-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden; /* Prevents emotes from accumulating at the bottom */
+    pointer-events: none; /* Makes the container non-interactive */
+    z-index: -1; /* Sends the container behind other content */
+}
