moviendo el porcentaje de stats

--- a/twitchdle/styles.css
+++ b/twitchdle/styles.css
@@ -1,7 +1,7 @@
 :root {
-    --col-bg: #f0f0f0;
+    --col-bg: #e5d4ff;
     --col-bg-light: #e0e0e0;
-    --col-bg-lighter: #d0d0d0;
+    --col-bg-lighter: #c096ff;
     --col-primary: #9146ff;
     --col-primary-dark: #634e83;
     --col-primary-light: #c096ff;
